--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,10 @@ header {
   top: 0;
 }
 
+main p {
+  font-size: 20px;
+}
+
 /* container */
 .tl-menù {
   display: flex;
@@ -75,16 +79,7 @@ header {
   display: none;
 }
 
-
 /* justify-content */
-.justify-content-center {
-  justify-content: center;
-}
-
-.justify-content-end {
-  justify-content: flex-end;
-}
-
 .justify-content-around {
   justify-content: space-around;
 }
@@ -143,7 +138,19 @@ header {
   font-size: 40px;
 }
 
-/* color  */
+/* text-effects  */
 .text-w {
   color: white;
+}
+
+.text-bold {
+  font-weight: bolder;
+}
+
+.text-red {
+  color: red;
+}
+
+.text-black {
+  color: black;
 }
